src/test/ui/span/E0057.stderr
error[E0057]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/E0057.rs:3:13
   |
LL |     let a = f();
   |             ^-- supplied 0 arguments
   |             |
   |             expected 1 argument

error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/E0057.rs:5:13
   |
LL |     let c = f(2, 3);
   |             ^ -  - supplied 2 arguments
   |             |
   |             expected 1 argument

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0057`.
